--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,11 +72,11 @@ a {
 .card {
   background: #fff;
   border-radius: 4px;
-  box-shadow: 0px 2px 10px rgba(247, 81, 118, 0.15);
+  box-shadow: 0px 2px 10px rgba(149, 116, 234, 0.3);
   transition: all 0.3s ease; }
   .card:hover {
     transform: translateY(-5px);
-    box-shadow: 0px 8px 25px -3px rgba(247, 81, 118, 0.1); }
+    box-shadow: 0px 8px 25px -3px rgba(149, 116, 234, 0.3); }
   .card .media {
     border-radius: 4px 4px 0 0; }
 
@@ -91,14 +91,19 @@ a {
     left: 12px;
     max-width: 50px; }
   .media_title {
-    display: block; }
+    display: block;
+    word-wrap: break-word;
+    font-size: 14px;
+    line-height: 18px; }
+  .media_title:hover{
+    text-decoration: underline; }
   .media small {
     font-size: 12px;
     opacity: 0.65; }
 
 .upper {
   min-height: 250px;
-  background: #f75176;
+  background: #9574EA;
   color: #f5f5f5; }
 
 header {
@@ -129,8 +134,7 @@ header {
   margin-top: 15px; }
 
 .collection {
-  background: #f5f4f4;
-  box-shadow: 0px -25px 100px rgba(0, 0, 0, 0.1); }
+  background: #f5f4f4; }
 
 .filters {
   padding: 16px 0px;
@@ -178,6 +182,10 @@ header {
   width: 33.3333%;
   float: left;
   padding: 14px; }
+
+  .shared_link:nth-child(3n+1){
+    clear: both;
+  }
 
 .mentions {
   position: relative;
@@ -233,7 +241,7 @@ header {
   z-index: 2; }
 
 input.select_link[type=checkbox]:checked + .select_icon {
-  background-color: #f75176; }
+  background-color: #9574EA; }
 
 .copy_icon {
   display: block;
@@ -242,7 +250,7 @@ input.select_link[type=checkbox]:checked + .select_icon {
   position: fixed;
   bottom: 25px;
   right: 25px;
-  background: #f75176 url("../images/copy.png") no-repeat center center;
+  background: #9574EA url("../images/copy.png") no-repeat center center;
   border-radius: 50%;
   box-shadow: 0px 2px 3px rgba(85, 85, 85, 0.35);
   cursor: pointer;
@@ -250,3 +258,17 @@ input.select_link[type=checkbox]:checked + .select_icon {
   .copy_icon:hover {
     box-shadow: 0px 5px 10px -2px rgba(85, 85, 85, 0.35);
     transform: translateY(-2px); }
+    .copy_icon:active {
+      transform: scale(0.9);
+      opacity: 0.8;
+    }
+
+#copy_text{
+  height: 10px;
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 0;
+  pointer-events: none; }
